[project]
name = "bempp-cl"
version = "0.3.1"
authors = [
    { name = "Timo Betcke", email="timo.betcke@gmail.com" },
    { name = "Matthew Scroggs", email="bempp@mscroggs.co.uk" }
]
description = "The Bempp boundary element library"
readme = "README.md"
requires-python = ">=3.8.0"
license = { file = "LICENSE" }
dependencies = ["numpy", "numba", "meshio"]

[project.urls]
homepage = "https://bempp.com"
repository = "https://github.com/bempp/bempp-cl"

[project.optional-dependencies]
optional = ["matplotlib"]
style = ["pydocstyle", "flake8"]
test = ["pytest", "bempp-cl[optional]"]

[tool.setuptools]
packages = ["bempp"]
