[project]
name = "bempp-cl"
version = "0.3.2"
authors = [
    { name = "Timo Betcke", email="timo.betcke@gmail.com" },
    { name = "Matthew Scroggs", email="bempp@mscroggs.co.uk" }
]
description = "The Bempp boundary element library"
readme = "README.md"
requires-python = ">=3.8.0"
license = { file = "LICENSE" }
dependencies = ["numpy", "numba", "meshio", "scipy"]

[project.urls]
homepage = "https://bempp.com"
repository = "https://github.com/bempp/bempp-cl"

[project.optional-dependencies]
docs = ["sphinx-autoapi"]
optional = ["matplotlib"]
style = ["pydocstyle", "flake8"]
test = ["pytest", "pytest-xdist", "bempp-cl[optional]"]

[build-system]
requires = ["setuptools"]

[tool.setuptools]
packages = [
    "bempp_cl",
    "bempp_cl.api",
    "bempp_cl.api.assembly",
    "bempp_cl.api.external",
    "bempp_cl.api.fmm",
    "bempp_cl.api.grid",
    "bempp_cl.api.integration",
    "bempp_cl.api.linalg",
    "bempp_cl.api.operators",
    "bempp_cl.api.operators.boundary",
    "bempp_cl.api.operators.far_field",
    "bempp_cl.api.operators.potential",
    "bempp_cl.api.shapes",
    "bempp_cl.api.space",
    "bempp_cl.api.utils",
    "bempp_cl.core"
]
